--- a/style.css
+++ b/style.css
@@ -1,4 +1,86 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	background-color: var(--offwhite);
+}
+
+:root {
+	--teal: #1dbdbb;
+	--coffee: #2f272a;
+	--orange: #cf5533;
+	--yellow: #eaa133;
+	--offwhite: #fff3e1;
+	--white: #ffff;
+}
+
 body {
-	background-color: #e5e7eb;
-	font-family: Arial, Helvetica, sans-serif;
+	width: 100%;
+}
+
+#logo {
+	background-color: var(--coffee);
+}
+
+#home {
+	background-color: var(--coffee);
+}
+
+header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	background-color: var(--coffee);
+	color: var(--offwhite);
+}
+
+button {
+	text-decoration: none;
+	border: none;
+	outline: none;
+	background-color: transparent;
+	color: var(--offwhite);
+	cursor: pointer;
+	margin: 10px 10px;
+}
+
+button:hover {
+	transition: .5s;
+	color: var(--teal);
+}
+
+nav {
+	background-color: var(--coffee);
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+img {
+	border-radius: 10px;
+}
+
+.container {
+
+	margin: 25px 83px;
+}
+
+.selfie {
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+	width: 100%;
+}
+
+#selfie {
+	border: solid;
+	border-radius: 10px;
+	border-color: var(--orange);
+}
+
+.about {
+	display: flex;
+	flex-direction: row;
 }
