--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 	margin: 0;
 	box-sizing: border-box;
 	background-color: var(--offwhite);
+
+	/* debug */
+	/* outline: 3px solid lightgreen !important;
+	background-color: rgb(0 100 0 / 0.05) !important; */
+
 }
 
 :root {
@@ -19,12 +24,15 @@ body {
 }
 
 #logo {
-	background-color: var(--coffee);
+	/* background-color: var(--coffee); */
+	background-color: transparent;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	padding: 10px 0;
 }
 
-#home {
-	background-color: var(--coffee);
-}
+
 
 header {
 	display: flex;
@@ -32,8 +40,9 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	background-color: var(--coffee);
+	background-color: #c3c3c3;
 	color: var(--offwhite);
+	background-image: url("pngkey.com-forest-trees-png-933967.png");
 }
 
 button {
@@ -44,11 +53,15 @@ button {
 	color: var(--offwhite);
 	cursor: pointer;
 	margin: 10px 10px;
+	/* width: 25vw;
+	height: 3.5vh; */
+	max-width: 500px;
 }
 
 button:hover {
 	transition: .5s;
 	color: var(--teal);
+
 }
 
 nav {
@@ -56,6 +69,7 @@ nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
+	width: 25vw;
 }
 
 img {
@@ -63,24 +77,47 @@ img {
 }
 
 .container {
+	display: flex;
+	flex-direction: column;
+	margin: 25px auto;
+	position: relative;
+	border-radius: 10px;
+	background-image: url("kisspng-landscape-graphics-line-drawing-illustration-vector-hand-drawn-line-mountains-5a9d742bd547e0.5460353715202683318736.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	max-width: 1440px;
 
-	margin: 25px 83px;
 }
 
-.selfie {
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-	width: 100%;
-}
+
 
 #selfie {
 	border: solid;
 	border-radius: 10px;
 	border-color: var(--orange);
+	float: left;
+	margin: 15px;
 }
 
-.about {
-	display: flex;
-	flex-direction: row;
+.about,
+.abouttxt {
+	width: 550px;
+	float: right;
+	position: absolute;
+	margin: 10vh 20vw;
+	text-align: center;
+	border-radius: 10px;
+	border: var(--orange);
+}
+
+.abouttxt {
+	margin-top: 12.5vh;
+}
+
+@media (max-width: 768px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+	}
 }
