--- a/style.css
+++ b/style.css
@@ -126,13 +126,7 @@ form {
 	margin: 50px auto;
 }
 
-form h2 {
-	margin-bottom: 20px;
-	text-align: center;
-	border-radius: 10px;
-	border: solid var(--coffee);
-	background-color: var(--yellow);
-}
+
 
 form input,
 form textarea {
@@ -162,4 +156,33 @@ form button {
 form button:hover {
 	transition: .25s;
 	background-color: var(--teal);
+}
+
+
+.thankyou {
+	background-color: var(--orange);
+	display: flex;
+	flex-direction: column;
+	padding: 2vw 4vh;
+	width: 90%;
+	max-width: 600px;
+	border-radius: 10px;
+	border: solid var(--coffee);
+	margin: 50px auto;
+	text-align: center;
+}
+
+.thankscontainer {
+	border: 0;
+	margin: 10px;
+	padding: 20px;
+	outline: none;
+	background: var(--offwhite);
+	border: solid var(--yellow);
+	border-radius: 30px;
+	font-size: 18px;
+}
+
+.thankscontainer h2 {
+	font-size: 35px;
 }
